wrap Loader component in div and apply height style property to prevent component at bottom to take up space during loading

--- a/farm-connect-frontend/src/components/ListingsInterests/ListingsInterests.css
+++ b/farm-connect-frontend/src/components/ListingsInterests/ListingsInterests.css
@@ -3,6 +3,10 @@
     width: 20%;
 }
 
+#loader_div {
+    height: 247px;
+}
+
 h5 {
     color: #3a5f0b;
     margin-bottom: 0px;
